docs: add local testing and production setup guides, fix CloudNet task config